tests/ui/consts/issue-17718-const-bad-values.stderr
error[E0764]: mutable borrows of lifetime-extended temporaries in the top-level scope of a constant are not allowed
  --> $DIR/issue-17718-const-bad-values.rs:7:34
   |
LL | const C1: &'static mut [usize] = &mut [];
   |                                  ^^^^^^^

error[E0080]: constructing invalid value: encountered mutable reference in `const` value
  --> $DIR/issue-17718-const-bad-values.rs:11:1
   |
LL | const C2: &'static mut i32 = unsafe { &mut S };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ it is undefined behavior to use this value
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $PTR, align: $PTR) {
               HEX_DUMP
           }

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0764.
For more information about an error, try `rustc --explain E0080`.
